2.0.6:
Sam Lantinga - Mon May  9 12:42:05 PDT 2022
 * Added support for AVIF images (https://github.com/AOMediaCodec/libavif)
Sylvain Becker - Sun May  8 21:59:27 PDT 2022
 * Added IMG_ReadXPMFromArrayToRGB888()
Sam Lantinga - Sun May  8 14:31:27 PDT 2022
 * Added support for JXL images (https://jpegxl.info/)
Nika Starceva - Mon Dec 20 14:33:50 2021
 * Added support for QOI images (https://qoiformat.org/)
Thomas Bernard - Mon Oct 26 23:32:10 2020
 * Fixed XCF regression introduced in 2.0.5
Sam Lantinga - Thu Oct  3 18:09:17 PDT 2019
 * Added support for loading animated GIFs
Sylvain Becker Sat Aug 31 22:55:31 2019
 * LoadBMP() now loads files using SDL2.
Ozkan Sezer - Mon Aug 19 21:35:04 2019
 * Allow using libwebpdecoder instead libwebp.

2.0.5:
Sam Lantinga - Wed Jun 19 07:30:51 PDT 2019
 * Updated external libraries libpng-1.6.32, libwebp-1.0.2
Sam Lantinga - Tue Jun 11 00:17:01 PDT 2019
 * Fixed a number of security issues:
   TALOS-2019-0820
   TALOS-2019-0821
   TALOS-2019-0841
   TALOS-2019-0842
   TALOS-2019-0843
   TALOS-2019-0844
Sathyanarayanan Gunasekaran, Brian Palmer, Charlie Birks, Amadeus - Mon Jun 10 16:48:20 PDT 2019
 * Ported SDL_image to emscripten

2.0.4:
Michał Janiszewski - Fri Sept 28 22:00:26 PST 2018
 * Fixed memory issues in the XCF loader
Ryan Gordon - Wed Sept 26 14:58:31 PST 2018
 * Fixed a number of security issues, including TALOS-2018-0645

2.0.3:
Ryan Gordon - Sun Jan 28 21:28:16 PST 2018
 * Fixed a number of security issues:
   TALOS-2017-0488
   TALOS-2017-0489
   TALOS-2017-0490
   TALOS-2017-0491
   TALOS-2017-0497
   TALOS-2017-0498
   TALOS-2017-0499
Sam Lantinga - Sun Jan 28 21:24:10 PST 2018
 * Added a dependency on SDL 2.0.8

2.0.2:
Sam Lantinga - Sat Oct 21 23:42:28 PDT 2017
 * Added simple SVG image support based on Nano SVG
Sam Lantinga - Sat Oct 21 22:14:34 PDT 2017
 * Updated external libraries jpeg-9b, libpng-1.6.32, libwebp-0.6.0, tiff-4.0.8 and zlib-1.2.11
Yves Younan - Fri, Oct  6, 2017  3:38:38 PM